versions/3.4.2/docs/VolumeReference.md
# VolumeReference

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] 
**name** | **str** |  | [optional] [readonly] 
**path** | **str** |  | [optional] [readonly] 
**nodes** | **list[int]** |  | [optional] [readonly] 
**display_name** | **str** |  | [optional] [readonly] 
**visual_tag** | **str** |  | [optional] [readonly] 
**is_default** | **bool** |  | [optional] [readonly] 
**use_for_homes** | **bool** |  | [optional] [readonly] 
**use_for_workspaces** | **bool** |  | [optional] [readonly] 
**type** | **str** |  | [optional] [readonly] 
**snm_enabled** | **bool** |  | [optional] [readonly] 
**snfs_name** | **str** |  | [optional] [readonly] 
**simulated_quotas** | **bool** |  | [optional] [readonly] 
**fs_properties** | [**FSProperties**](FSProperties.md) |  | [optional] 
**backend** | [**Backend**](Backend.md) |  | [optional] 
**status** | [**VolumeStatus**](VolumeStatus.md) |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


