versions/3.5.0/docs/VolumeReference.md
# VolumeReference


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**path** | **str** |  | [optional] [readonly] 
**nodes** | **[int]** |  | [optional] [readonly] 
**display_name** | **str** |  | [optional] [readonly] 
**visual_tag** | **str, none_type** |  | [optional] [readonly] 
**is_default** | **bool** |  | [optional] [readonly] 
**use_for_homes** | **bool** |  | [optional] [readonly] 
**use_for_workspaces** | **bool** |  | [optional] [readonly] 
**type** | **str** |  | [optional] [readonly] 
**snm_enabled** | **bool** |  | [optional] [readonly] 
**snfs_name** | **str, none_type** |  | [optional] [readonly] 
**simulated_quotas** | **bool** |  | [optional] [readonly] 
**fs_properties** | [**FSProperties**](FSProperties.md) |  | [optional] 
**backend** | [**Backend**](Backend.md) |  | [optional] 
**status** | [**VolumeStatus**](VolumeStatus.md) |  | [optional] 
**cloud_account** | **int, none_type** |  | [optional] [readonly] 
**name** | **str, none_type** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


